fixed some style for zoom controles when on mobile

--- a/src/map/map.css
+++ b/src/map/map.css
@@ -33,6 +33,14 @@
       outline: none;
     }
   }
+
+  @media (max-width: 48rem) {
+    width: 3rem;
+    button {
+      height: 1.5rem;
+      width: 1.5rem;
+    }
+  }
 }
 
 .ol-scale-line {
